<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

        <com.google.android.material.tabs.TabLayout
            android:background="@color/colorAccent"
            android:id="@+id/tablayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabGravity="fill"
            app:tabTextColor="#000"
            app:tabIndicatorHeight="5dp"
            app:tabIndicatorColor="@color/colorPrimaryDark"
            app:tabMode="fixed"
            app:tabSelectedTextColor="@color/colorPrimaryDark"
            app:tabTextAppearance="@font/actor">
            <com.google.android.material.tabs.TabItem
                android:id="@+id/item1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/anime">
            </com.google.android.material.tabs.TabItem>
            <com.google.android.material.tabs.TabItem
                android:id="@+id/item2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/manga">
            </com.google.android.material.tabs.TabItem>
            <com.google.android.material.tabs.TabItem
                android:id="@+id/item3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/watchlist">
            </com.google.android.material.tabs.TabItem>
        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager.widget.ViewPager
            android:layout_below="@+id/tablayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/viewpager">
        </androidx.viewpager.widget.ViewPager>
</RelativeLayout>