<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragments.Anime">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:elevation="10dp"
            android:id="@+id/channel"
            android:layout_marginTop="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:elevation="5dp"
                android:id="@+id/channelname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_centerHorizontal="true"
                android:background="@color/colorAccent"
                android:fontFamily="@font/aclonica"
                android:text="@string/anime_channels"
                android:textAlignment="center"
                android:textColor="#000"
                android:textStyle="bold">
            </TextView>

            <LinearLayout
                android:layout_below="@id/channelname"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:orientation="horizontal">
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <de.hdodenhof.circleimageview.CircleImageView

                        android:elevation="8dp"
                        android:id="@+id/imageViewgogo"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginStart="6dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/animeso"
                        android:scaleType="centerCrop"/>
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_toEndOf="@+id/imageViewgogo"
                        android:elevation="8dp"
                        android:id="@+id/imageViewgogo1"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/juju"
                        android:scaleType="centerCrop"/>
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_toEndOf="@+id/imageViewgogo1"
                        android:elevation="8dp"
                        android:id="@+id/imageViewkiss"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/golden"
                        android:scaleType="centerCrop"/>
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_toEndOf="@+id/imageViewkiss"
                        android:elevation="8dp"
                        android:id="@+id/imageViewheaven"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/nasakun"
                        android:scaleType="centerCrop"/>
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:elevation="10dp"
            android:id="@+id/recycler_fall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#CDC4C4">

            <TextView
                android:elevation="5dp"
                android:padding="5dp"
                android:id="@+id/fall2020"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@color/colorAccent"
                android:fontFamily="@font/aclonica"
                android:text="@string/fall_2020"
                android:textAlignment="center"
                android:textColor="#000"
                android:textStyle="bold">

            </TextView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fall2020">
            </androidx.recyclerview.widget.RecyclerView>
        </RelativeLayout>

        <TextView
            android:layout_marginTop="8dp"
            android:elevation="5dp"
            android:padding="5dp"
            android:id="@+id/categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:fontFamily="@font/aclonica"
            android:text="Catergory"
            android:textAlignment="center"
            android:textColor="#000"
            android:textStyle="bold">

        </TextView>

        <LinearLayout
            android:elevation="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="70dp"
            android:id="@+id/grid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_marginStart="8dp">

    <LinearLayout
                android:elevation="10dp"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:background="#fff"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_marginTop="2dp"
                    android:background="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="81dp"
                    android:elevation="8dp">

                    <ImageView
                        android:layout_width="71dp"
                        android:layout_height="73dp"
                        android:layout_centerInParent="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/animeso" />

                </RelativeLayout>

                <TextView
                    android:textSize="10sp"
                    android:layout_marginTop="4dp"
                    android:elevation="8dp"
                    android:textStyle="bold"
                    android:background="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="1dp"
                    android:text="@string/sanam"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:layout_marginBottom="2dp"
                    android:fontFamily="@font/aclonica"/>
            </LinearLayout>
    <LinearLayout
        android:elevation="10dp"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:background="#fff"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_marginTop="2dp"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:elevation="8dp">

            <ImageView
                android:layout_width="71dp"
                android:layout_height="73dp"
                android:layout_centerInParent="true"
                android:scaleType="centerCrop"
                android:src="@drawable/juju" />

        </RelativeLayout>

        <TextView
            android:textSize="10sp"
            android:layout_marginTop="4dp"
            android:elevation="8dp"
            android:textStyle="bold"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="1dp"
            android:text="@string/sanam"
            android:textAlignment="center"
            android:textColor="#fff"
            android:layout_marginBottom="2dp"
            android:fontFamily="@font/aclonica"/>
    </LinearLayout>
    <LinearLayout
        android:elevation="10dp"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:background="#fff"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_marginTop="2dp"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:elevation="8dp">

            <ImageView
                android:layout_width="71dp"
                android:layout_height="73dp"
                android:layout_centerInParent="true"
                android:scaleType="centerCrop"
                android:src="@drawable/golden" />

        </RelativeLayout>

        <TextView
            android:textSize="10sp"
            android:layout_marginTop="4dp"
            android:elevation="8dp"
            android:textStyle="bold"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="1dp"
            android:text="@string/sanam"
            android:textAlignment="center"
            android:textColor="#fff"
            android:layout_marginBottom="2dp"
            android:fontFamily="@font/aclonica"/>
    </LinearLayout>
    <LinearLayout
        android:elevation="10dp"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:background="#fff"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_marginTop="2dp"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:elevation="8dp">

            <ImageView
                android:layout_width="71dp"
                android:layout_height="73dp"
                android:layout_centerInParent="true"
                android:scaleType="centerCrop"
                android:src="@drawable/hinata" />

        </RelativeLayout>

        <TextView
            android:textSize="10sp"
            android:layout_marginTop="4dp"
            android:elevation="8dp"
            android:textStyle="bold"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="1dp"
            android:text="@string/sanam"
            android:textAlignment="center"
            android:textColor="#fff"
            android:layout_marginBottom="2dp"
            android:fontFamily="@font/aclonica"/>
    </LinearLayout>

</LinearLayout>
        </LinearLayout>
</LinearLayout>
</ScrollView>
</RelativeLayout>